# openGL-template

./: CMakeLists.txt
include/glad/include/glad/: glad.h
include/glad/src/: glad.c
src/: color.h  example.cpp  gameboard_utils.h  main.cpp  shader.cpp  shader.h  square.cpp  square.h  vao_wrapper.cpp  vao_wrapper.h  vector_utils.h
src/shaders/: shader.frag  shader.vert
